--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-codementor",
+  "name": "react-webpack-node-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
