--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
     "build" : "webpack -p",
-    "start": "webpack -p && node server.js"
+    "start": "npm install && webpack -p && node server.js"
   },
   "keywords": [],
   "author": "",
